Removing demo css from the social icons css and putting it in it's own scss file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Social Icons</title>
 	<link rel="stylesheet" href="assets/css/social-icons.css"/>
+	<link rel="stylesheet" href="assets/css/main.css"/>
 </head>
 
 <body>
