Updating the small and default sized icons to be 16x16 and 32x32.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	</div>
 
 	<div class="small-icons">
-		<h2>Small Icons</h2>
+		<h2>Small (small) Icons</h2>
 		<ul class="icon-list">
 			<li><a href="#" title="Twitter" class="si si-small si-twitter"></a></li>
 			<li><a href="#" title="Facebook" class="si si-small si-facebook"></a></li>
@@ -183,6 +183,56 @@
 			<li><a href="#" title="Stack Overflow" class="si-circle si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-circle si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-circle si-colored si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="colored-square-icons">
+		<h2>Colored Square small Icons</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si-square si-small si-colored si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si-square si-small si-colored si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si-square si-small si-colored si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si-square si-small si-colored si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si-square si-small si-colored si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si-square si-small si-colored si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si-square si-small si-colored si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si-square si-small si-colored si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si-square si-small si-colored si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si-square si-small si-colored si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si-square si-small si-colored si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si-square si-small si-colored si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si-square si-small si-colored si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si-square si-small si-colored si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si-square si-small si-colored si-feed"></a></li>
+			<li><a href="#" title="mail" class="si-square si-small si-colored si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si-square si-small si-colored si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si-square si-small si-colored si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si-square si-small si-colored si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="colored-square-icons">
+		<h2>Colored Circle small Icons</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si-circle si-small si-colored si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si-circle si-small si-colored si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si-circle si-small si-colored si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si-circle si-small si-colored si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si-circle si-small si-colored si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si-circle si-small si-colored si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si-circle si-small si-colored si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si-circle si-small si-colored si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si-circle si-small si-colored si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si-circle si-small si-colored si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si-circle si-small si-colored si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si-circle si-small si-colored si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si-circle si-small si-colored si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si-circle si-small si-colored si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si-circle si-small si-colored si-feed"></a></li>
+			<li><a href="#" title="mail" class="si-circle si-small si-colored si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si-circle si-small si-colored si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si-circle si-small si-colored si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si-circle si-small si-colored si-linkedin"></a></li>
 		</ul>
 	</div>
 </div>
