--- a/index.html
+++ b/index.html
@@ -9,8 +9,58 @@
 <body>
 <h1>Social Icons</h1>
 <div class="social-icons">
+	<div class="small-icons">
+		<h2>Small Icons (16x16)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si si-small si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si si-small si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si si-small si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si si-small si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si si-small si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si si-small si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si si-small si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si si-small si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si si-small si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si si-small si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si si-small si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si si-small si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si si-small si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si si-small si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si si-small si-feed"></a></li>
+			<li><a href="#" title="mail" class="si si-small si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si si-small si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si si-small si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si si-small si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="medium-icons">
+		<h2>Medium Icons (24x24)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si si-medium si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si si-medium si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si si-medium si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si si-medium si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si si-medium si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si si-medium si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si si-medium si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si si-medium si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si si-medium si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si si-medium si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si si-medium si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si si-medium si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si si-medium si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si si-medium si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si si-medium si-feed"></a></li>
+			<li><a href="#" title="mail" class="si si-medium si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si si-medium si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si si-medium si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si si-medium si-linkedin"></a></li>
+		</ul>
+	</div>
+
 	<div class="simple-icons">
-		<h2>Simple Icons</h2>
+		<h2>Default Icons (32x32)</h2>
 		<ul class="icon-list">
 			<li><a href="#" title="Twitter" class="si si-twitter"></a></li>
 			<li><a href="#" title="Facebook" class="si si-facebook"></a></li>
@@ -31,6 +81,31 @@
 			<li><a href="#" title="Stack Overflow" class="si si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="large-icons">
+		<h2>Large Icons (48x48)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si si-large si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si si-large si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si si-large si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si si-large si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si si-large si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si si-large si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si si-large si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si si-large si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si si-large si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si si-large si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si si-large si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si si-large si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si si-large si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si si-large si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si si-large si-feed"></a></li>
+			<li><a href="#" title="mail" class="si si-large si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si si-large si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si si-large si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si si-large si-linkedin"></a></li>
 		</ul>
 	</div>
 
@@ -85,31 +160,6 @@
 		</ul>
 	</div>
 
-	<div class="small-icons">
-		<h2>Small (small) Icons</h2>
-		<ul class="icon-list">
-			<li><a href="#" title="Twitter" class="si si-small si-twitter"></a></li>
-			<li><a href="#" title="Facebook" class="si si-small si-facebook"></a></li>
-			<li><a href="#" title="Google Plus" class="si si-small si-googleplus"></a></li>
-			<li><a href="#" title="YouTube" class="si si-small si-youtube"></a></li>
-			<li><a href="#" title="Flickr" class="si si-small si-flickr"></a></li>
-			<li><a href="#" title="GitHub" class="si si-small si-github"></a></li>
-			<li><a href="#" title="WordPress" class="si si-small si-wordpress"></a></li>
-			<li><a href="#" title="Blogger" class="si si-small si-blogger"></a></li>
-			<li><a href="#" title="Tumblr" class="si si-small si-tumblr"></a></li>
-			<li><a href="#" title="Yahoo" class="si si-small si-yahoo"></a></li>
-			<li><a href="#" title="SoundCloud" class="si si-small si-soundcloud"></a></li>
-			<li><a href="#" title="Skype" class="si si-small si-skype"></a></li>
-			<li><a href="#" title="reddit" class="si si-small si-reddit"></a></li>
-			<li><a href="#" title="lastfm" class="si si-small si-lastfm"></a></li>
-			<li><a href="#" title="feed" class="si si-small si-feed"></a></li>
-			<li><a href="#" title="mail" class="si si-small si-mail"></a></li>
-			<li><a href="#" title="Stack Overflow" class="si si-small si-stackoverflow"></a></li>
-			<li><a href="#" title="Pinterest" class="si si-small si-pinterest"></a></li>
-			<li><a href="#" title="LinkedIn" class="si si-small si-linkedin"></a></li>
-		</ul>
-	</div>
-
 	<div class="colored-icons">
 		<h2>Colored Icons</h2>
 		<ul class="icon-list">
@@ -135,6 +185,56 @@
 		</ul>
 	</div>
 
+	<div class="colored-square-small-icons">
+		<h2>Colored Square Small Icons (16x16)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si-square si-small si-colored si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si-square si-small si-colored si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si-square si-small si-colored si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si-square si-small si-colored si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si-square si-small si-colored si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si-square si-small si-colored si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si-square si-small si-colored si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si-square si-small si-colored si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si-square si-small si-colored si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si-square si-small si-colored si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si-square si-small si-colored si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si-square si-small si-colored si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si-square si-small si-colored si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si-square si-small si-colored si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si-square si-small si-colored si-feed"></a></li>
+			<li><a href="#" title="mail" class="si-square si-small si-colored si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si-square si-small si-colored si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si-square si-small si-colored si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si-square si-small si-colored si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="colored-square-medium-icons">
+		<h2>Colored Square Medium Icons (24x24)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si-square si-medium si-colored si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si-square si-medium si-colored si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si-square si-medium si-colored si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si-square si-medium si-colored si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si-square si-medium si-colored si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si-square si-medium si-colored si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si-square si-medium si-colored si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si-square si-medium si-colored si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si-square si-medium si-colored si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si-square si-medium si-colored si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si-square si-medium si-colored si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si-square si-medium si-colored si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si-square si-medium si-colored si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si-square si-medium si-colored si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si-square si-medium si-colored si-feed"></a></li>
+			<li><a href="#" title="mail" class="si-square si-medium si-colored si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si-square si-medium si-colored si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si-square si-medium si-colored si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si-square si-medium si-colored si-linkedin"></a></li>
+		</ul>
+	</div>
+
 	<div class="colored-square-icons">
 		<h2>Colored Square Icons</h2>
 		<ul class="icon-list">
@@ -157,6 +257,31 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-colored si-linkedin"></a></li>
+		</ul>
+	</div>
+
+	<div class="colored-square-large-icons">
+		<h2>Colored Square Large Icons (48x48)</h2>
+		<ul class="icon-list">
+			<li><a href="#" title="Twitter" class="si-square si-large si-colored si-twitter"></a></li>
+			<li><a href="#" title="Facebook" class="si-square si-large si-colored si-facebook"></a></li>
+			<li><a href="#" title="Google Plus" class="si-square si-large si-colored si-googleplus"></a></li>
+			<li><a href="#" title="YouTube" class="si-square si-large si-colored si-youtube"></a></li>
+			<li><a href="#" title="Flickr" class="si-square si-large si-colored si-flickr"></a></li>
+			<li><a href="#" title="GitHub" class="si-square si-large si-colored si-github"></a></li>
+			<li><a href="#" title="WordPress" class="si-square si-large si-colored si-wordpress"></a></li>
+			<li><a href="#" title="Blogger" class="si-square si-large si-colored si-blogger"></a></li>
+			<li><a href="#" title="Tumblr" class="si-square si-large si-colored si-tumblr"></a></li>
+			<li><a href="#" title="Yahoo" class="si-square si-large si-colored si-yahoo"></a></li>
+			<li><a href="#" title="SoundCloud" class="si-square si-large si-colored si-soundcloud"></a></li>
+			<li><a href="#" title="Skype" class="si-square si-large si-colored si-skype"></a></li>
+			<li><a href="#" title="reddit" class="si-square si-large si-colored si-reddit"></a></li>
+			<li><a href="#" title="lastfm" class="si-square si-large si-colored si-lastfm"></a></li>
+			<li><a href="#" title="feed" class="si-square si-large si-colored si-feed"></a></li>
+			<li><a href="#" title="mail" class="si-square si-large si-colored si-mail"></a></li>
+			<li><a href="#" title="Stack Overflow" class="si-square si-large si-colored si-stackoverflow"></a></li>
+			<li><a href="#" title="Pinterest" class="si-square si-large si-colored si-pinterest"></a></li>
+			<li><a href="#" title="LinkedIn" class="si-square si-large si-colored si-linkedin"></a></li>
 		</ul>
 	</div>
 
@@ -187,32 +312,7 @@
 	</div>
 
 	<div class="colored-square-icons">
-		<h2>Colored Square small Icons</h2>
-		<ul class="icon-list">
-			<li><a href="#" title="Twitter" class="si-square si-small si-colored si-twitter"></a></li>
-			<li><a href="#" title="Facebook" class="si-square si-small si-colored si-facebook"></a></li>
-			<li><a href="#" title="Google Plus" class="si-square si-small si-colored si-googleplus"></a></li>
-			<li><a href="#" title="YouTube" class="si-square si-small si-colored si-youtube"></a></li>
-			<li><a href="#" title="Flickr" class="si-square si-small si-colored si-flickr"></a></li>
-			<li><a href="#" title="GitHub" class="si-square si-small si-colored si-github"></a></li>
-			<li><a href="#" title="WordPress" class="si-square si-small si-colored si-wordpress"></a></li>
-			<li><a href="#" title="Blogger" class="si-square si-small si-colored si-blogger"></a></li>
-			<li><a href="#" title="Tumblr" class="si-square si-small si-colored si-tumblr"></a></li>
-			<li><a href="#" title="Yahoo" class="si-square si-small si-colored si-yahoo"></a></li>
-			<li><a href="#" title="SoundCloud" class="si-square si-small si-colored si-soundcloud"></a></li>
-			<li><a href="#" title="Skype" class="si-square si-small si-colored si-skype"></a></li>
-			<li><a href="#" title="reddit" class="si-square si-small si-colored si-reddit"></a></li>
-			<li><a href="#" title="lastfm" class="si-square si-small si-colored si-lastfm"></a></li>
-			<li><a href="#" title="feed" class="si-square si-small si-colored si-feed"></a></li>
-			<li><a href="#" title="mail" class="si-square si-small si-colored si-mail"></a></li>
-			<li><a href="#" title="Stack Overflow" class="si-square si-small si-colored si-stackoverflow"></a></li>
-			<li><a href="#" title="Pinterest" class="si-square si-small si-colored si-pinterest"></a></li>
-			<li><a href="#" title="LinkedIn" class="si-square si-small si-colored si-linkedin"></a></li>
-		</ul>
-	</div>
-
-	<div class="colored-square-icons">
-		<h2>Colored Circle small Icons</h2>
+		<h2>Colored Circle Small Icons</h2>
 		<ul class="icon-list">
 			<li><a href="#" title="Twitter" class="si-circle si-small si-colored si-twitter"></a></li>
 			<li><a href="#" title="Facebook" class="si-circle si-small si-colored si-facebook"></a></li>
