Finish adding additional sized icons (24x24 and 48x48)

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 	</div>
 
 	<div class="colored-square-icons">
-		<h2>Colored Square Icons</h2>
+		<h2>Colored Square Icons (32x32)</h2>
 		<ul class="icon-list">
 			<li><a href="#" title="Twitter" class="si-square si-colored si-twitter"></a></li>
 			<li><a href="#" title="Facebook" class="si-square si-colored si-facebook"></a></li>
@@ -285,9 +285,58 @@
 		</ul>
 	</div>
 
+  <div class="colored-square-icons">
+    <h2>Colored Circle Small Icons (16x16)</h2>
+    <ul class="icon-list">
+      <li><a href="#" title="Twitter" class="si-circle si-small si-colored si-twitter"></a></li>
+      <li><a href="#" title="Facebook" class="si-circle si-small si-colored si-facebook"></a></li>
+      <li><a href="#" title="Google Plus" class="si-circle si-small si-colored si-googleplus"></a></li>
+      <li><a href="#" title="YouTube" class="si-circle si-small si-colored si-youtube"></a></li>
+      <li><a href="#" title="Flickr" class="si-circle si-small si-colored si-flickr"></a></li>
+      <li><a href="#" title="GitHub" class="si-circle si-small si-colored si-github"></a></li>
+      <li><a href="#" title="WordPress" class="si-circle si-small si-colored si-wordpress"></a></li>
+      <li><a href="#" title="Blogger" class="si-circle si-small si-colored si-blogger"></a></li>
+      <li><a href="#" title="Tumblr" class="si-circle si-small si-colored si-tumblr"></a></li>
+      <li><a href="#" title="Yahoo" class="si-circle si-small si-colored si-yahoo"></a></li>
+      <li><a href="#" title="SoundCloud" class="si-circle si-small si-colored si-soundcloud"></a></li>
+      <li><a href="#" title="Skype" class="si-circle si-small si-colored si-skype"></a></li>
+      <li><a href="#" title="reddit" class="si-circle si-small si-colored si-reddit"></a></li>
+      <li><a href="#" title="lastfm" class="si-circle si-small si-colored si-lastfm"></a></li>
+      <li><a href="#" title="feed" class="si-circle si-small si-colored si-feed"></a></li>
+      <li><a href="#" title="mail" class="si-circle si-small si-colored si-mail"></a></li>
+      <li><a href="#" title="Stack Overflow" class="si-circle si-small si-colored si-stackoverflow"></a></li>
+      <li><a href="#" title="Pinterest" class="si-circle si-small si-colored si-pinterest"></a></li>
+      <li><a href="#" title="LinkedIn" class="si-circle si-small si-colored si-linkedin"></a></li>
+    </ul>
+  </div>
+
+  <div class="colored-medium-icons">
+    <h2>Colored Circle Medium Icons (24x24)</h2>
+    <ul class="icon-list">
+      <li><a href="#" title="Twitter" class="si-circle si-medium si-colored si-twitter"></a></li>
+      <li><a href="#" title="Facebook" class="si-circle si-medium si-colored si-facebook"></a></li>
+      <li><a href="#" title="Google Plus" class="si-circle si-medium si-colored si-googleplus"></a></li>
+      <li><a href="#" title="YouTube" class="si-circle si-medium si-colored si-youtube"></a></li>
+      <li><a href="#" title="Flickr" class="si-circle si-medium si-colored si-flickr"></a></li>
+      <li><a href="#" title="GitHub" class="si-circle si-medium si-colored si-github"></a></li>
+      <li><a href="#" title="WordPress" class="si-circle si-medium si-colored si-wordpress"></a></li>
+      <li><a href="#" title="Blogger" class="si-circle si-medium si-colored si-blogger"></a></li>
+      <li><a href="#" title="Tumblr" class="si-circle si-medium si-colored si-tumblr"></a></li>
+      <li><a href="#" title="Yahoo" class="si-circle si-medium si-colored si-yahoo"></a></li>
+      <li><a href="#" title="SoundCloud" class="si-circle si-medium si-colored si-soundcloud"></a></li>
+      <li><a href="#" title="Skype" class="si-circle si-medium si-colored si-skype"></a></li>
+      <li><a href="#" title="reddit" class="si-circle si-medium si-colored si-reddit"></a></li>
+      <li><a href="#" title="lastfm" class="si-circle si-medium si-colored si-lastfm"></a></li>
+      <li><a href="#" title="feed" class="si-circle si-medium si-colored si-feed"></a></li>
+      <li><a href="#" title="mail" class="si-circle si-medium si-colored si-mail"></a></li>
+      <li><a href="#" title="Stack Overflow" class="si-circle si-medium si-colored si-stackoverflow"></a></li>
+      <li><a href="#" title="Pinterest" class="si-circle si-medium si-colored si-pinterest"></a></li>
+      <li><a href="#" title="LinkedIn" class="si-circle si-medium si-colored si-linkedin"></a></li>
+    </ul>
+  </div>
 
 	<div class="colored-circle-icons">
-		<h2>Colored Circle Icons</h2>
+		<h2>Colored Circle Icons (32x32)</h2>
 		<ul class="icon-list">
 			<li><a href="#" title="Twitter" class="si-circle si-colored si-twitter"></a></li>
 			<li><a href="#" title="Facebook" class="si-circle si-colored si-facebook"></a></li>
@@ -311,30 +360,30 @@
 		</ul>
 	</div>
 
-	<div class="colored-square-icons">
-		<h2>Colored Circle Small Icons</h2>
-		<ul class="icon-list">
-			<li><a href="#" title="Twitter" class="si-circle si-small si-colored si-twitter"></a></li>
-			<li><a href="#" title="Facebook" class="si-circle si-small si-colored si-facebook"></a></li>
-			<li><a href="#" title="Google Plus" class="si-circle si-small si-colored si-googleplus"></a></li>
-			<li><a href="#" title="YouTube" class="si-circle si-small si-colored si-youtube"></a></li>
-			<li><a href="#" title="Flickr" class="si-circle si-small si-colored si-flickr"></a></li>
-			<li><a href="#" title="GitHub" class="si-circle si-small si-colored si-github"></a></li>
-			<li><a href="#" title="WordPress" class="si-circle si-small si-colored si-wordpress"></a></li>
-			<li><a href="#" title="Blogger" class="si-circle si-small si-colored si-blogger"></a></li>
-			<li><a href="#" title="Tumblr" class="si-circle si-small si-colored si-tumblr"></a></li>
-			<li><a href="#" title="Yahoo" class="si-circle si-small si-colored si-yahoo"></a></li>
-			<li><a href="#" title="SoundCloud" class="si-circle si-small si-colored si-soundcloud"></a></li>
-			<li><a href="#" title="Skype" class="si-circle si-small si-colored si-skype"></a></li>
-			<li><a href="#" title="reddit" class="si-circle si-small si-colored si-reddit"></a></li>
-			<li><a href="#" title="lastfm" class="si-circle si-small si-colored si-lastfm"></a></li>
-			<li><a href="#" title="feed" class="si-circle si-small si-colored si-feed"></a></li>
-			<li><a href="#" title="mail" class="si-circle si-small si-colored si-mail"></a></li>
-			<li><a href="#" title="Stack Overflow" class="si-circle si-small si-colored si-stackoverflow"></a></li>
-			<li><a href="#" title="Pinterest" class="si-circle si-small si-colored si-pinterest"></a></li>
-			<li><a href="#" title="LinkedIn" class="si-circle si-small si-colored si-linkedin"></a></li>
-		</ul>
-	</div>
+  <div class="colored-large-icons">
+    <h2>Colored Circle Large Icons (48x48)</h2>
+    <ul class="icon-list">
+      <li><a href="#" title="Twitter" class="si-circle si-large si-colored si-twitter"></a></li>
+      <li><a href="#" title="Facebook" class="si-circle si-large si-colored si-facebook"></a></li>
+      <li><a href="#" title="Google Plus" class="si-circle si-large si-colored si-googleplus"></a></li>
+      <li><a href="#" title="YouTube" class="si-circle si-large si-colored si-youtube"></a></li>
+      <li><a href="#" title="Flickr" class="si-circle si-large si-colored si-flickr"></a></li>
+      <li><a href="#" title="GitHub" class="si-circle si-large si-colored si-github"></a></li>
+      <li><a href="#" title="WordPress" class="si-circle si-large si-colored si-wordpress"></a></li>
+      <li><a href="#" title="Blogger" class="si-circle si-large si-colored si-blogger"></a></li>
+      <li><a href="#" title="Tumblr" class="si-circle si-large si-colored si-tumblr"></a></li>
+      <li><a href="#" title="Yahoo" class="si-circle si-large si-colored si-yahoo"></a></li>
+      <li><a href="#" title="SoundCloud" class="si-circle si-large si-colored si-soundcloud"></a></li>
+      <li><a href="#" title="Skype" class="si-circle si-large si-colored si-skype"></a></li>
+      <li><a href="#" title="reddit" class="si-circle si-large si-colored si-reddit"></a></li>
+      <li><a href="#" title="lastfm" class="si-circle si-large si-colored si-lastfm"></a></li>
+      <li><a href="#" title="feed" class="si-circle si-large si-colored si-feed"></a></li>
+      <li><a href="#" title="mail" class="si-circle si-large si-colored si-mail"></a></li>
+      <li><a href="#" title="Stack Overflow" class="si-circle si-large si-colored si-stackoverflow"></a></li>
+      <li><a href="#" title="Pinterest" class="si-circle si-large si-colored si-pinterest"></a></li>
+      <li><a href="#" title="LinkedIn" class="si-circle si-large si-colored si-linkedin"></a></li>
+    </ul>
+  </div>
 </div>
 </body>
 </html>
