Adding Instagram icon.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li><a href="#" title="Stack Overflow" class="si si-small si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-small si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-small si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si si-small si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -56,6 +57,7 @@
 			<li><a href="#" title="Stack Overflow" class="si si-medium si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-medium si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-medium si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si si-medium si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -81,6 +83,7 @@
 			<li><a href="#" title="Stack Overflow" class="si si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -106,6 +109,7 @@
 			<li><a href="#" title="Stack Overflow" class="si si-large si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-large si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-large si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si si-large si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -131,6 +135,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-square si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -157,6 +162,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-circle si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-circle si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-circle si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-circle si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -182,6 +188,7 @@
 			<li><a href="#" title="Stack Overflow" class="si si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -207,6 +214,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-small si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-small si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-small si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-square si-small si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -232,6 +240,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-medium si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-medium si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-medium si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-square si-medium si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -257,6 +266,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-square si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -282,6 +292,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-square si-large si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-square si-large si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-square si-large si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-square si-large si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -307,6 +318,7 @@
       <li><a href="#" title="Stack Overflow" class="si-circle si-small si-colored si-stackoverflow"></a></li>
       <li><a href="#" title="Pinterest" class="si-circle si-small si-colored si-pinterest"></a></li>
       <li><a href="#" title="LinkedIn" class="si-circle si-small si-colored si-linkedin"></a></li>
+      <li><a href="#" title="Instagram" class="si-circle si-small si-colored si-instagram"></a></li>
     </ul>
   </div>
 
@@ -332,6 +344,7 @@
       <li><a href="#" title="Stack Overflow" class="si-circle si-medium si-colored si-stackoverflow"></a></li>
       <li><a href="#" title="Pinterest" class="si-circle si-medium si-colored si-pinterest"></a></li>
       <li><a href="#" title="LinkedIn" class="si-circle si-medium si-colored si-linkedin"></a></li>
+      <li><a href="#" title="Instagram" class="si-circle si-medium si-colored si-instagram"></a></li>
     </ul>
   </div>
 
@@ -357,6 +370,7 @@
 			<li><a href="#" title="Stack Overflow" class="si-circle si-colored si-stackoverflow"></a></li>
 			<li><a href="#" title="Pinterest" class="si-circle si-colored si-pinterest"></a></li>
 			<li><a href="#" title="LinkedIn" class="si-circle si-colored si-linkedin"></a></li>
+			<li><a href="#" title="Instagram" class="si-circle si-colored si-instagram"></a></li>
 		</ul>
 	</div>
 
@@ -382,6 +396,7 @@
       <li><a href="#" title="Stack Overflow" class="si-circle si-large si-colored si-stackoverflow"></a></li>
       <li><a href="#" title="Pinterest" class="si-circle si-large si-colored si-pinterest"></a></li>
       <li><a href="#" title="LinkedIn" class="si-circle si-large si-colored si-linkedin"></a></li>
+      <li><a href="#" title="Instagram" class="si-circle si-large si-colored si-instagram"></a></li>
     </ul>
   </div>
 </div>
